src/objects/ContentBlockItem__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PageToItemId__c</fullName>
        <description>Internal field used at runtime. Should be empty in the DB</description>
        <label>PageToItemId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Times_Used__c</fullName>
        <label>Times Used</label>
        <summaryForeignKey>PageToItem__c.ContentBlockItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field will determine if the item is regular HTML or a Web Form include.</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Web Form</label>
        <referenceTo>Web_Form__c</referenceTo>
        <relationshipLabel>ContentBlockItems</relationshipLabel>
        <relationshipName>ContentBlockItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ContentBlockItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContentBlockItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>